tests/miniJava/neg/000275_mutation.MiniJava
class java { public static void Main java String [ ] java ) { { } } }
